latest logistic notebook
home/away ELO; avg odds; site odds;

--- a/logistic-regression.ipynb
+++ b/logistic-regression.ipynb
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826f2fb7",
+   "id": "2da6257e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dba617f2",
+   "id": "48385c5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d27dd1f3",
+   "id": "89ee5f43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566d81ea",
+   "id": "b9351114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,8 +474,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d762ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "betting_feats = ['B365H', 'B365D', 'B365A', 'IWH', 'IWD', 'IWA', 'WHH', 'WHD', 'WHA']\n",
+    "betting_feats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00a3964e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_odds(df, betting_feats):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    home_odds = []\n",
+    "    away_odds = []\n",
+    "    draw_odds = []\n",
+    "    for odd in betting_feats:\n",
+    "        odd_type = odd[-1]\n",
+    "        if odd_type == 'H':\n",
+    "            home_odds.append(odd)\n",
+    "        elif odd_type == 'A':\n",
+    "            away_odds.append(odd)\n",
+    "        else:\n",
+    "            draw_odds.append(odd)\n",
+    "    avg_home_odds = df[home_odds].mean(axis=1)\n",
+    "    avg_away_odds = df[away_odds].mean(axis=1)\n",
+    "    avg_draw_odds = df[draw_odds].mean(axis=1)\n",
+    "    \n",
+    "    ordered_cols = ['HomeOdds', 'AwayOdds', 'DrawOdds'] + df.columns.tolist()\n",
+    "    \n",
+    "    df['HomeOdds'] = avg_home_odds\n",
+    "    df['AwayOdds'] = avg_away_odds\n",
+    "    df['DrawOdds'] = avg_draw_odds\n",
+    "    \n",
+    "    return df[ordered_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3152f02b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_df = compute_odds(learning_df, betting_feats)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "2f1249fd",
+   "id": "20fc73c7",
    "metadata": {},
    "source": [
     "**2.2.8 Elo Difference**"
@@ -484,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f749303",
+   "id": "26d7a5ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1138a9e3",
+   "id": "70cd553c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,6 +563,16 @@
    "metadata": {},
    "source": [
     "**2.2.8 Peek @ Learning DataFrame**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4a8ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_df"
    ]
   },
   {
@@ -618,6 +683,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "std_scaler = StandardScaler()\n",
+    "to_scale = ['HomeTeamELO', 'AwayTeamELO', 'HomeOdds', 'AwayOdds', 'DrawOdds'] + betting_feats\n",
+    "\n",
+    "xTr.loc[:, to_scale] = std_scaler.fit_transform(xTr.loc[:, to_scale])\n",
+    "xTe.loc[:, to_scale] = std_scaler.transform(xTe.loc[:, to_scale])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9113ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "xTr"
    ]
   },
@@ -636,18 +716,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# baseline_preds = np.full((4952, 1), 2) #predicts home wins all the time\n",
-    "# accuracy_score(yTe.Result.values, baseline_preds.ravel())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ada8db0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# accuracy_score(yTr.Result.values, np.full((32447, 1), 2))"
+    "baseline_preds = np.full((8628, 1), 2) #predicts home wins all the time\n",
+    "accuracy_score(yTe.Result.values, baseline_preds.ravel())"
    ]
   },
   {
@@ -702,10 +772,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53e2fa7d",
+   "metadata": {},
+   "source": [
+    "**3.4.2 Parameter Tuning**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "189ae1b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "logistic_params = {'penalty': ['l1','l2','elasticnet'],\n",
+    "                   'C':[0.001,0.01,0.10,0.50,1.0]}\n",
+    "\n",
+    "logistic_randsearch = RandomizedSearchCV(estimator=LogisticRegression(max_iter=10000),\n",
+    "                                         param_distributions=logistic_params,\n",
+    "                                         scoring='accuracy',\n",
+    "                                         verbose=1,\n",
+    "                                         cv=5)\n",
+    "\n",
+    "logistic_rand_results = logistic_randsearch.fit(xTr, yTr.values.ravel())\n",
+    "print(\"Best: %f using %s\" % (logistic_rand_results.best_score_, logistic_rand_results.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42158f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs_preds = logistic_rand_results.best_estimator_.predict(xTe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3063eff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_score(yTe.Result.values, rs_preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d6b3e49",
    "metadata": {},
    "source": [
-    "**3.4.2 Team Fit Model**"
+    "**3.4.3 Team Fit Model**"
    ]
   },
   {
@@ -726,7 +846,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bxTr, bxTe = X_barcelona[X_barcelona.Year <= 2018], X_barcelona[X_barcelona.Year > 2018]\n",
+    "bxTr, bxTe = X_barcelona[X_barcelona.Year <= 2016], X_barcelona[X_barcelona.Year > 2018]\n",
     "byTr, byTe = y_barcelona.loc[bxTr.index, :], y_barcelona.loc[bxTe.index, :]"
    ]
   },
@@ -804,18 +924,6 @@
    "source": [
     "ridge_preds = ridge_model.predict(xTe)\n",
     "accuracy_score(yTe.Result.values, ridge_preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cd96643",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "yTe.shape"
    ]
   }
  ],
