--- a/ELO Calculator.ipynb
+++ b/ELO Calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "70592f0a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "4599955e",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "ec7eaa52",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "# remove rows with only na values\n",
     "df = df.dropna(how=\"all\")\n",
     "\n",
-    "features_to_keep = [\"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\", \"FTR\", \"HS\", \"AS\", \"HST\", \"AST\", \n",
+    "features_to_keep = [\"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTHG\", \"FTAG\", \"FTR\", \"HS\", \"AS\", \"HST\", \"AST\", \n",
     "                    \"B365H\", \"B365D\", \"B365A\",\n",
     "                    \"IWH\", \"IWD\", \"IWA\",\n",
     "                    \"WHH\", \"WHD\", \"WHA\"]\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "a6bbf065",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "3ef80c83",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "ed082f37",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name mismatches:  ['Evian Thonon Gaillard', 'Gimnastic', 'Munich 1860', 'Kaiserslautern', 'Arles']\n",
+      "Name mismatches:  ['Kaiserslautern', 'Gimnastic', 'Evian Thonon Gaillard', 'Munich 1860', 'Arles']\n",
       "Exceptions:  []\n"
      ]
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "1358cf6d",
    "metadata": {},
    "outputs": [
@@ -161,6 +161,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Div</th>\n",
        "      <th>Date</th>\n",
        "      <th>HomeTeam</th>\n",
        "      <th>AwayTeam</th>\n",
@@ -170,7 +171,6 @@
        "      <th>HS</th>\n",
        "      <th>AS</th>\n",
        "      <th>HST</th>\n",
-       "      <th>AST</th>\n",
        "      <th>...</th>\n",
        "      <th>B365D</th>\n",
        "      <th>B365A</th>\n",
@@ -187,13 +187,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>F1</td>\n",
        "      <td>2000-07-28</td>\n",
        "      <td>Marseille</td>\n",
        "      <td>Troyes</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>H</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -211,13 +211,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>F1</td>\n",
        "      <td>2000-07-28</td>\n",
        "      <td>Paris SG</td>\n",
        "      <td>Strasbourg</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>H</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -235,13 +235,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>F1</td>\n",
        "      <td>2000-07-29</td>\n",
        "      <td>Auxerre</td>\n",
        "      <td>Sedan</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>A</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -259,13 +259,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>F1</td>\n",
        "      <td>2000-07-29</td>\n",
        "      <td>Bordeaux</td>\n",
        "      <td>Metz</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>D</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -283,13 +283,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>F1</td>\n",
        "      <td>2000-07-29</td>\n",
        "      <td>Guingamp</td>\n",
        "      <td>St Etienne</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>D</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -330,156 +330,156 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37394</th>\n",
-       "      <td>2021-10-24</td>\n",
-       "      <td>Sevilla</td>\n",
-       "      <td>Levante</td>\n",
+       "      <th>37685</th>\n",
+       "      <td>F1</td>\n",
+       "      <td>2021-12-05</td>\n",
+       "      <td>St Etienne</td>\n",
+       "      <td>Rennes</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.47</td>\n",
-       "      <td>4.40</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>7.50</td>\n",
-       "      <td>1839.052124</td>\n",
-       "      <td>1629.306763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37395</th>\n",
-       "      <td>2021-10-24</td>\n",
-       "      <td>Stuttgart</td>\n",
-       "      <td>Union Berlin</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>2.50</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>2.85</td>\n",
-       "      <td>2.45</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>1641.394043</td>\n",
-       "      <td>1690.527466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37396</th>\n",
-       "      <td>2021-10-24</td>\n",
-       "      <td>Verona</td>\n",
-       "      <td>Lazio</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>3.05</td>\n",
-       "      <td>3.55</td>\n",
-       "      <td>2.25</td>\n",
-       "      <td>3.10</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>2.25</td>\n",
-       "      <td>1591.301147</td>\n",
-       "      <td>1709.902466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37397</th>\n",
-       "      <td>2021-10-24</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>Tottenham</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.40</td>\n",
-       "      <td>3.45</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>2.38</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>2.90</td>\n",
-       "      <td>1834.961426</td>\n",
-       "      <td>1804.304077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37398</th>\n",
-       "      <td>2021-10-25</td>\n",
-       "      <td>Getafe</td>\n",
-       "      <td>Celta</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>A</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>1551.744507</td>\n",
+       "      <td>1709.489502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37686</th>\n",
+       "      <td>D1</td>\n",
+       "      <td>2021-12-05</td>\n",
+       "      <td>Stuttgart</td>\n",
+       "      <td>Hertha</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>D</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>1604.867065</td>\n",
-       "      <td>1698.811035</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>1623.838501</td>\n",
+       "      <td>1620.785278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37687</th>\n",
+       "      <td>E0</td>\n",
+       "      <td>2021-12-05</td>\n",
+       "      <td>Tottenham</td>\n",
+       "      <td>Norwich</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>1780.980591</td>\n",
+       "      <td>1638.818604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37688</th>\n",
+       "      <td>SP1</td>\n",
+       "      <td>2021-12-05</td>\n",
+       "      <td>Vallecano</td>\n",
+       "      <td>Espanol</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>1642.253540</td>\n",
+       "      <td>1655.962036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37689</th>\n",
+       "      <td>I1</td>\n",
+       "      <td>2021-12-05</td>\n",
+       "      <td>Venezia</td>\n",
+       "      <td>Verona</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>1500.693115</td>\n",
+       "      <td>1610.816650</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37399 rows × 21 columns</p>\n",
+       "<p>37690 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Date   HomeTeam      AwayTeam  FTHG  FTAG FTR    HS    AS   HST  \\\n",
-       "0      2000-07-28  Marseille        Troyes   3.0   1.0   H   NaN   NaN   NaN   \n",
-       "1      2000-07-28   Paris SG    Strasbourg   3.0   1.0   H   NaN   NaN   NaN   \n",
-       "2      2000-07-29    Auxerre         Sedan   0.0   1.0   A   NaN   NaN   NaN   \n",
-       "3      2000-07-29   Bordeaux          Metz   1.0   1.0   D   NaN   NaN   NaN   \n",
-       "4      2000-07-29   Guingamp    St Etienne   2.0   2.0   D   NaN   NaN   NaN   \n",
-       "...           ...        ...           ...   ...   ...  ..   ...   ...   ...   \n",
-       "37394  2021-10-24    Sevilla       Levante   5.0   3.0   H  18.0  12.0  11.0   \n",
-       "37395  2021-10-24  Stuttgart  Union Berlin   1.0   1.0   D   8.0  11.0   2.0   \n",
-       "37396  2021-10-24     Verona         Lazio   4.0   1.0   H  16.0   9.0   7.0   \n",
-       "37397  2021-10-24   West Ham     Tottenham   1.0   0.0   H  13.0   7.0   4.0   \n",
-       "37398  2021-10-25     Getafe         Celta   0.0   3.0   A  11.0  16.0   2.0   \n",
+       "       Div        Date    HomeTeam    AwayTeam  FTHG  FTAG FTR    HS    AS  \\\n",
+       "0       F1  2000-07-28   Marseille      Troyes   3.0   1.0   H   NaN   NaN   \n",
+       "1       F1  2000-07-28    Paris SG  Strasbourg   3.0   1.0   H   NaN   NaN   \n",
+       "2       F1  2000-07-29     Auxerre       Sedan   0.0   1.0   A   NaN   NaN   \n",
+       "3       F1  2000-07-29    Bordeaux        Metz   1.0   1.0   D   NaN   NaN   \n",
+       "4       F1  2000-07-29    Guingamp  St Etienne   2.0   2.0   D   NaN   NaN   \n",
+       "...    ...         ...         ...         ...   ...   ...  ..   ...   ...   \n",
+       "37685   F1  2021-12-05  St Etienne      Rennes   0.0   5.0   A  12.0  18.0   \n",
+       "37686   D1  2021-12-05   Stuttgart      Hertha   2.0   2.0   D  10.0  15.0   \n",
+       "37687   E0  2021-12-05   Tottenham     Norwich   3.0   0.0   H  17.0  10.0   \n",
+       "37688  SP1  2021-12-05   Vallecano     Espanol   1.0   0.0   H   7.0  10.0   \n",
+       "37689   I1  2021-12-05     Venezia      Verona   3.0   4.0   A   9.0  16.0   \n",
        "\n",
-       "       AST  ...  B365D  B365A   IWH   IWD   IWA   WHH   WHD   WHA  \\\n",
+       "       HST  ...  B365D  B365A   IWH   IWD   IWA   WHH   WHD   WHA  \\\n",
        "0      NaN  ...    NaN    NaN  1.45  3.50  5.00  1.45  3.50  6.00   \n",
        "1      NaN  ...    NaN    NaN  1.35  3.60  6.50  1.40  3.70  6.50   \n",
        "2      NaN  ...    NaN    NaN  1.70  3.10  3.80  1.65  3.25  4.70   \n",
        "3      NaN  ...    NaN    NaN  1.55  3.30  4.50  1.50  3.40  6.00   \n",
        "4      NaN  ...    NaN    NaN  2.20  2.80  2.80  2.40  2.90  2.75   \n",
        "...    ...  ...    ...    ...   ...   ...   ...   ...   ...   ...   \n",
-       "37394  7.0  ...    4.2    8.0  1.47  4.40  7.00  1.44  4.20  7.50   \n",
-       "37395  3.0  ...    3.5    2.9  2.50  3.40  2.85  2.45  3.40  2.80   \n",
-       "37396  4.0  ...    3.6    2.2  3.05  3.55  2.25  3.10  3.50  2.25   \n",
-       "37397  4.0  ...    3.5    3.0  2.40  3.45  2.95  2.38  3.40  2.90   \n",
-       "37398  8.0  ...    3.0    3.1  2.65  2.95  3.00  2.55  3.00  3.00   \n",
+       "37685  2.0  ...   3.75   1.85  4.10  3.75  1.85  4.20  3.60  1.80   \n",
+       "37686  3.0  ...   3.40   3.30  2.25  3.30  3.25  2.25  3.25  3.25   \n",
+       "37687  7.0  ...   5.00   8.50  1.43  4.70  7.50  1.40  4.40  8.50   \n",
+       "37688  0.0  ...   3.10   3.80  2.15  3.20  3.60  2.15  3.10  3.70   \n",
+       "37689  5.0  ...   3.50   2.00  3.60  3.40  2.10  3.50  3.40  2.15   \n",
        "\n",
        "       HomeTeamELO  AwayTeamELO  \n",
        "0      1690.283447  1580.911621  \n",
@@ -488,16 +488,16 @@
        "3      1729.042725  1677.067505  \n",
        "4      1576.033813  1621.786011  \n",
        "...            ...          ...  \n",
-       "37394  1839.052124  1629.306763  \n",
-       "37395  1641.394043  1690.527466  \n",
-       "37396  1591.301147  1709.902466  \n",
-       "37397  1834.961426  1804.304077  \n",
-       "37398  1604.867065  1698.811035  \n",
+       "37685  1551.744507  1709.489502  \n",
+       "37686  1623.838501  1620.785278  \n",
+       "37687  1780.980591  1638.818604  \n",
+       "37688  1642.253540  1655.962036  \n",
+       "37689  1500.693115  1610.816650  \n",
        "\n",
-       "[37399 rows x 21 columns]"
+       "[37690 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
