--- a/scraper_v1.ipynb
+++ b/scraper_v1.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T06:59:21.517359Z",
-     "start_time": "2024-10-17T06:59:21.485407Z"
+     "end_time": "2025-01-20T10:24:32.907276Z",
+     "start_time": "2025-01-20T10:24:32.901439Z"
     }
    },
    "source": [
@@ -15,14 +15,16 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-10-17T07:01:57.363512Z",
-     "start_time": "2024-10-17T06:59:21.520364Z"
+     "start_time": "2025-01-20T10:24:32.908281Z"
     }
    },
    "source": [
@@ -71,15 +73,14 @@
     "            f.write(league_data.content)\n"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
     "scrolled": true,
-    "ExecuteTime": {
-     "end_time": "2024-10-17T07:01:59.843020Z",
-     "start_time": "2024-10-17T07:01:57.364517Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -98,14 +99,13 @@
     "    country_df.to_csv(\"data/\" + file_name)"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-17T07:02:02.337701Z",
-     "start_time": "2024-10-17T07:01:59.844024Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -122,19 +122,18 @@
     "total_df.to_csv(\"data/\" + file_name)"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-17T07:02:02.340828Z",
-     "start_time": "2024-10-17T07:02:02.339030Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": null
   }
  ],
  "metadata": {
